# real_time_crypto_trading_bot

./: .gitignore  .pre-commit-config.yaml  README.md  ruff.toml
docker-compose/: Makefile  docker-compose-ollama-gpu.yml  docker-compose-test.yml  init-ollama.sh  news-signal-historical.yml  news-signal-live.yml  news-sinal-live.yml  redpanda.yml  run_ollama.sh  technical-indicators-historical.yml  technical-indicators-live.yml
services/candles/: Dockerfile  Makefile  README.md  historical.settings.env  live.settings.env  settings.env
services/news/: .dockerignore  Dockerfile  Makefile  README.md  config.py  live.settings.env  news_data_source.py  news_downloader.py  pyproject.toml  run.py
services/news-signal/: Makefile  README.md  config.py  fine_tuning.py  hello.py  live.settings.env  ollama.env  pyproject.toml  run.py  settings.env
services/news-signal/data/: instruction_dataset_claude_10k.jsonl  instruction_dataset_ollama_10k.jsonl
services/news-signal/llms/: claude.py  config.py  factory.py  ollama.py
services/prediction-api/: Cargo.toml  Makefile
services/price-predictor/: Makefile  feature_reader.py  inference.py  names.py  price_predictor.py  pyproject.toml  run.py  training.py
services/price-predictor/models/: dummy_model.py  xgbosst_model.py
services/technical-indicators/: Dockerfile  README.md  candle.py  pyproject.toml  run.py
services/to-feature-store/: Dockerfile  README.md  config.py  live.settings.news-signal.env  pyproject.toml
services/trades/: Dockerfile  Makefile  README.md  config.py  pyproject.toml  run.py  settings.env
(+20 files in other folders)
