[project]
name = "news-signal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index-core>=0.12.5",
    "llama-index-llms-anthropic>=0.6.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "quixstreams>=3.4.0",
]
