[project]
name = "price-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "comet-ml>=3.48.1",
    "hopsworks[python]>=4.1.4",
    "joblib>=1.4.2",
    "loguru>=0.7.3",
    "optuna>=4.1.0",
    "pydantic-settings>=2.7.0",
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.3",
]
